--- a/README.Rmd
+++ b/README.Rmd
@@ -68,13 +68,13 @@ The function **lagrange5q0** predicts a series of 22 cumulative probabilities of
 
 This function allows four types of mortality inputs: 
 
-1.	A single mortality input (either nMx and nqx) for any age interval. The value of k will be assumed equal to 0 (average outcome of the model) and the value of the mortality input will be matched exactly.
+1.	A single mortality input (either nqx or nMx) for any age interval. The value of k will be assumed equal to 0 (average outcome of the model) and the value of the mortality input will be matched exactly.
 
-2.	A single mortality input (either nMx and nqx) for any age interval and a value of k. Both the mortality input and the value of k and will be matched exactly.
+2.	A single mortality input (either nqx or nMx) for any age interval and a value of k. Both the mortality input and the value of k and will be matched exactly.
 
-3.	Two mortality inputs (either nMx and nqx) for any age interval. The value of k will be estimated and the value of the two mortality inputs will be matched exactly.
+3.	Two mortality inputs (either nqx or nMx) for any age interval. The value of k will be estimated and the value of the two mortality inputs will be matched exactly.
 
-4.	More than two mortality inputs (either nMx and nqx) for any age interval. One of them must be selected for matching. The value of k will be estimated, the selected input will be matched exactly, and the root mean square error will be minimized over the remaining mortality inputs.
+4.	More than two mortality inputs (either nqx or nMx) for any age interval. One of them must be selected for matching. The value of k will be estimated, the selected input will be matched exactly, and the root mean square error will be minimized over the remaining mortality inputs.
 
 The computation of the root mean square error (RMSE) can be weighted. When minimizing a series of q(x), i.e. cumulative probabilities starting at age 0, we recommend using weights proportional to the length of the last age interval (see fourth example below). This approach was used to produce the results of the paper.
 
@@ -132,7 +132,7 @@ Two types of 95% confidence intervals (CIs) are automatically provided:
 
 #### Caveat
 
-The log-quadratic model is based on a set of vital records from Western countries. Predictions based on values of q(5y) above 0.150 and on values of k below -1.1 or above +1.5 are extrapolations. A warning message will be produced when such cases occur. Beyond these limits, it also might be impossible to converge to a solution. An error messages will be produced in such case.
+The log-quadratic model is based on a set of vital records from Western countries. Predictions based on values of q(5y) above 0.150 and on values of k below -1.1 or above +1.5 are extrapolations. A warning message will be produced when such cases occur. Beyond these limits, it also might be impossible to converge to a solution. An error message will be produced in such case.
 
 
 
