--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ The package uses the method of Lagrange to implement a log-quadratic model able 
 
 Data and R code needed to replicate the coefficients of the log-quadratic model are available on the website of the Under-5 Mortality Database (U5MD): https://web.sas.upenn.edu/global-age-patterns-under-five-mortality/
 
-To report issues or suggest improvements, please contact averhulst\@ced.uab.be.
+To report issues or suggest improvements, please contact averhulst@ced.uab.es.
 
 
 
