--- a/README.Rmd
+++ b/README.Rmd
@@ -31,14 +31,14 @@ The package uses the method of Lagrange to implement a log-quadratic model able 
 
 Data and R code needed to replicate the coefficients of the log-quadratic model are available on the website of the Under-5 Mortality Database (U5MD): https://web.sas.upenn.edu/global-age-patterns-under-five-mortality/
 
-To report issues or suggest improvements, please contact averhulst@ced.uab.es.
+To report issues or suggest improvements, please contact andrea.verhulst@ined.fr
 
 
 
 
 #### Authors of the package
 
-* **Andrea Verhulst** - *Development of the R code and package.* - [web page](https://cedproves.uab.cat/directori/andrea-verhulst/)
+* **Andrea Verhulst** - *Development of the R code and package.* - [web page](https://www.ined.fr/en/research/researchers/Verhulst+Andrea)
 
 * **Julio Romero** - *Analytical development of the method of Langrage for solving the log-quadratic model (under MATLAB).* - [web page](https://www.lshtm.ac.uk/aboutus/people/romero-prieto.julio)
 
