BETA VERSION (updated documentation)

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,11 @@ Based on these outputs, the package also computes the average number of years li
 
 Data and R code needed to replicate the coefficients of the log-quadratic model are available on the website of the Under-5 Mortality Database (U5MD): https://web.sas.upenn.edu/global-age-patterns-under-five-mortality/
 
+
+{\color{red}
+BETA VERSION: The package includes new coefficients derived from Demographic and Health Surveys (DHS) collected between 1985 and 2022 in sub-Saharan Africa and south Asia. These coefficients will updated with the most recent DHS available before publication.} 
+
+
 To report issues or suggest improvements, please contact andrea.verhulst@ined.fr
 
 
@@ -77,7 +82,7 @@ This function allows four types of mortality inputs:
 
 4.	More than two mortality inputs (either nqx or nMx) for any age interval. One of them must be selected for matching. The selected input will be matched exactly, the root mean square error will be minimized over the remaining mortality inputs, and the value of k will be estimated.
 
-The computation of the root mean square error (RMSE) can be weighted. When minimizing a series of q(x), i.e. cumulative probabilities starting at age 0, we recommend using weights proportional to the length of the last age interval (see fourth example below). This approach was used to produce the results of the paper.
+The computation of the root mean square error (RMSE) can be weighted. When minimizing a series of q(x), i.e. cumulative probabilities starting at age 0, we recommend using weights proportional to the length of the last age interval (see fifth example below). This approach was used to produce the results of the paper.
 
 \_
 
@@ -143,7 +148,7 @@ The log-quadratic model is based on a set of vital records from Western countrie
 
 ```{r example, eval = F}
 
-#1. One input (k = 0): q(28d,5y) (Jordan 2015)
+#1. One input (k = 0): q(28d,5y) (VR Jordan 2015)
 input <- format_data(
    rate      = 0.00804138,
    lower_age = 28,
@@ -154,7 +159,7 @@ input <- format_data(
 lagrange5q0(data = input)
 
 
-#2. One input and k = 0.5: q(28d,5y) (Jordan 2015)
+#2. One input and k = 0.5: q(28d,5y) (VR Jordan 2015)
 input <- format_data(
    rate      = 0.00804138,
    lower_age = 28,
@@ -165,7 +170,7 @@ input <- format_data(
 lagrange5q0(data = input, k = 0.5)
 
 
-#3. Two inputs: q(0,1y) and q(1y,4y) (Belgium 1984)
+#3. Two inputs: q(0,1y) and q(1y,4y) (VR Belgium 1984)
 input <- format_data(
   lower_age = c(0,365.25),
   upper_age = c(365.25,365.25*5),
@@ -176,7 +181,7 @@ input <- format_data(
 lagrange5q0(data = input)
 
 
-#4. Two inputs: M(0,1y) and z(28d) (Australia 1935)
+#4. Two inputs: M(0,1y) and z(28d) (VR Australia 1935)
 input <-  format_data(
   lower_age = c(0,0),
   upper_age = c(365.25, 28),
@@ -187,7 +192,7 @@ input <-  format_data(
 lagrange5q0(data = input)
 
 
-#5. 22 inputs + 1 match: q(x) (Finland 1933)
+#5. 22 inputs + 1 match: q(x) (VR Finland 1933)
 data(fin1933)
 fin1933$weight <- c(fin1933$n[1:22]/(365.25*5), NA) 
 input <- format_data(
@@ -200,6 +205,19 @@ input <- format_data(
   weight    = fin1933$weight)
 
 lagrange5q0(data = input)
+
+
+#6. One input (Model B & regional k) : q(5y) (DHS DR Congo 2013-14)
+input <- format_data(
+   rate      = 0.10924,
+   lower_age = 0,
+   upper_age = 365.25*5,
+   type      = "qx",
+   sex       = "total")
+
+lagrange5q0(data = input, model = 'B', region = "Middle Africa")
+
+
 ```
 
 
